--- a/sites/www.thunderbird.net/includes/base/nav.html
+++ b/sites/www.thunderbird.net/includes/base/nav.html
@@ -77,14 +77,14 @@
       {{_('Downloads')}}
     </a>
   </li>
-  <li class="nav-entry no-border no-mobile">
+  <li class="nav-entry no-border no-mobile nav-button-fix">
     <div class="header-download">
       <a href="{{ url('thunderbird.latest.all') }}" class="btn btn-no-bg" aria-label="{{ _('Downloads') }}" title="{{ _('Find the latest version of Thunderbird.') }}">
         Downloads
       </a>
     </div>
   </li>
-  <li class="nav-entry no-border no-mobile">
+  <li class="nav-entry no-border no-mobile nav-button-fix">
     <div class="header-donate">
       <a href="{{ donate_url('header') }}" class="btn btn-no-bg" aria-label="{{ _('Donate') }}" title="{{ _('Donate') }}">
         <span aria-hidden="true">{{ svg('heart') }}</span>
