Add a headless donation landing page for mobile.

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -32,6 +32,7 @@
 @import "./pages/donations-help.less";
 @import "./pages/holiday.less";
 @import './pages/privacy.less';
+@import "./pages/donations-mobile.less";
 
 // Appeal Page imports - These should be split off into their own bundles at some point
 @import "./pages/survey.less";
