Give the nav popover a little more space

--- a/assets/less/new/components/site-nav.less
+++ b/assets/less/new/components/site-nav.less
@@ -184,6 +184,8 @@
 
       // Actual physical panel
       .popover-panel {
+        position: relative;
+        top: 0.25rem; // Push down just a liiiittle bit.
         background-color: var(--bg);
         color: var(--txt);
         border-radius: var(--border-radius-lg);
