Fix nav positioning on responsive view

--- a/assets/less/new/components/site-nav.less
+++ b/assets/less/new/components/site-nav.less
@@ -42,6 +42,13 @@
   }
 }
 
+@media (max-width: @lg) {
+  .site-nav {
+    --popover-left-align: 0;
+    --popover-right-align: 0.5rem;
+  }
+}
+
 .site-nav {
   .btn-donate::before,
   .btn-donate-lg::before,
