Add the desktop theme and consolidate some custom styling into layout.less

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -17,6 +17,7 @@
 @import "./new/components/pre-footer.less";
 @import "./new/components/announcement.less";
 @import "./new/components/footer.less";
+@import "./new/components/blocks.less";
 
 // Page imports
 @import "./pages/donations.less";
@@ -33,6 +34,7 @@
 @import "./pages/holiday.less";
 @import './pages/privacy.less';
 @import "./pages/donations-mobile.less";
+@import "./pages/products.less";
 
 // Appeal Page imports - These should be split off into their own bundles at some point
 @import "./pages/survey.less";
