--- a/sites/www.thunderbird.net/includes/base/footer.html
+++ b/sites/www.thunderbird.net/includes/base/footer.html
@@ -42,7 +42,7 @@
       <div class="site-link-section">
         <h4>{{ _('Contribute') }}</h4>
         <ul>
-          <li><a href="{{ url('thunderbird.donate') }}" class="dotted">{{_('Donations')}}</a></li>
+          <li><a href="{{ url('thunderbird.donate') }}" class="dotted">{{_('Donate')}}</a></li>
           <li><a href="{{ url('thunderbird.participate') }}" class="dotted">{{_('Participate')}}</a></li>
         </ul>
       </div>
