--- a/sites/www.thunderbird.net/includes/base/nav.html
+++ b/sites/www.thunderbird.net/includes/base/nav.html
@@ -68,7 +68,7 @@
     </button>
     <div id="nav-cat-contribute" class="popover-container">
       <ul class="popover-panel">
-        {{ nav_entry(svg('base/icons/menu/donations'), _('Donations'), _('Learn how to donate as an individual or business to support Thunderbird and open source.'), url('thunderbird.donate')) }}
+        {{ nav_entry(svg('base/icons/menu/donations'), _('Donate'), _('Learn how to donate as an individual or business to support Thunderbird and open source.'), url('thunderbird.donate')) }}
         {{ nav_entry(svg('base/icons/menu/participate'), _('Participate'), _('We need helping hands of all kinds. Learn how you can help Thunderbird and others.'), url('thunderbird.participate')) }}
       </ul>
     </div>
