Update matomo-config-utn to use a newer local matomo.js file.

--- a/sites/updates.thunderbird.net/includes/base/base.html
+++ b/sites/updates.thunderbird.net/includes/base/base.html
@@ -76,6 +76,7 @@
     {% block additional_site_js %}{% endblock %}
     {% block tracker_js %}
       <script type="text/javascript" src="{{ static('js/matomo-config-utn.js') }}" charset="utf-8"></script>
+      <script type="text/javascript" src="{{ static('js/matomo.js') }}" async defer></script>
       <noscript>
         <p><img src="//thunderbird.innocraft.cloud/piwik.php?idsite={{ matomo_site_id }}&rec=1" style="border:0;" alt="" /></p>
       </noscript>
