--- a/sites/www.thunderbird.net/includes/faq.html
+++ b/sites/www.thunderbird.net/includes/faq.html
@@ -23,7 +23,7 @@
     <div class="answer">
       {% trans trimmed donate=url('thunderbird.donate.form'), ways_to_help=url('thunderbird.participate') %}
         <p>You can
-          <a href="{{ donate }}">donate online</a> securely by credit card or PayPal. Google Pay, Apple Pay, and
+          <a href="{{ donate }}">donate online</a> securely by credit card or PayPal, Google Pay, Apple Pay, and
           bank transfers through SEPA, iDEAL and ACH are also available online.<br/>
           <strong>Give in your local currency!</strong> We accept over 100! Choose yours from the drop down menu next to ‘Amount’.<br/>
           <strong>You can give offline in USD only</strong> by mailing a check or money order made payable to "MZLA Technologies Corp". Mail to:
