Trim some trans blocks for localization

--- a/sites/www.thunderbird.net/includes/base/page.html
+++ b/sites/www.thunderbird.net/includes/base/page.html
@@ -80,7 +80,7 @@
       <h2>{{_('Learn What’s <span class="txt-gradient">Next</span>')}}</h2>
       <p>
         {% block post_content_copy %}
-        {% trans %}
+        {% trans trimmed %}
         Thunderbird keeps getting better. Subscribe to our newsletter and follow us on social media to stay
         informed.
         {% endtrans %}
